fix change style to use grouping selector instead of chaining selector

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,13 +1,13 @@
-.btn {
+.black, .yellow {
     font-size: 28px;
     font-family: Helvetica, "Times New Roman", Times, serif;
 }
 
-.btn.black {
+.black {
     background-color: #000;
     color: #fff;
 }
 
-.btn.yellow {
+.yellow {
     background-color: hsl(60, 100%, 50%);
 }
